--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700;800;900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
+}
+
+::selection {
+    color: white;
+    background: #0099ff
+}
+
+::-webkit-scrollbar {
+  width: 8px !important ;
+}
+
+::-webkit-scrollbar-track {
+  background: white !important;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #0099ff;
+  border-radius: 8px
 }
 
 section {
-    padding: 50px 0;
+  padding: 50px 0;
 }
 
 .container {
-    max-width: 1170px !important;
-    padding: 0 20px;
-    margin: auto;
+  max-width: 1170px !important;
+  padding: 0 20px;
+  margin: auto;
+}
+
+.sticky__header {
+  background: white;
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+  transition: 0.3s height linear;
+}
+
+
+@media only screen and (max-width: 768px) {
+  #menu {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    z-index:  100;
+    display: none;
+    justify-content: flex-end;
+  }
+
+  .show_menu {
+    display: flex !important;
+  }
 }
