--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,11 @@ section {
     display: flex !important;
   }
 }
+
+#box{
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /* background-image: linear-gradient(to top, #0c356a, #144c8d, #1864b2, #167ed8, #0099ff); */
+  background-color: white;
+  border-radius: 0.9rem;
+  /* color: white; */
+}
